# Crate

./: README.md
backend/: .env  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py  spotify.py  ws.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts  authContext.tsx  websocket.ts
frontend/src/pages/: CreateStationPage.tsx  HomePage.tsx  LiveSessionPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  StationPage.tsx
